--- a/Game/style.css
+++ b/Game/style.css
@@ -1,18 +1,32 @@
 canvas{
     background-color: #0394aa;
 }
-section {
-    background-color: #0394aa;
+body{
+    background-color:#fff;
 }
-ul {
-    list-style-type:none;
-    display:inline;
+h1 {
+    color: white;
 }
-    ul li {
-        background-color:#007acc;
-        width: 200px;
-    }
+ol {
+    color:white;
+    font-size: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+#ignore {
+    list-style: none;
+}
 a {
     text-decoration:none;
     color:white;
+}
+#text {
+     color:white;  
+}
+#container {
+    background-color: #0394aa;
+    margin-left:200px;
+    margin-right: 200px;
+    padding-bottom: 200px;
+    padding-top: 50px;
 }
